Finalization of features, documentation updates, and production network configuration alignment